--- a/themes/learn/static/css/theme.css
+++ b/themes/learn/static/css/theme.css
@@ -450,20 +450,20 @@ textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[typ
 body {
     font-family: "Work Sans", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
     font-weight: 300;
-    line-height: 1.6;
+    line-height: 1.4;
     font-size: 18px !important;
 }
 h2, h3, h4, h5, h6 {
     font-family: "Work Sans", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
     text-rendering: optimizeLegibility;
     color: #5e5e5e;
-    font-weight: 400;
+    font-weight: 300;
     letter-spacing: -1px;
 }
 h1 {
-    font-family: "Novacento Sans Wide", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
-    text-align: center;
-    text-transform: uppercase;
+    font-family: "Work Sans", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+    text-align: left;
+    /* text-transform: uppercase; */
     color: #222;
     font-weight: 200;
 }
