--- a/themes/learn/static/css/hugo-theme.css
+++ b/themes/learn/static/css/hugo-theme.css
@@ -160,20 +160,29 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   font-weight: inherit;
 }
 
-h2 {
-  font-size: 2rem;
+h1 {
+  font-size: 2.8rem;
   line-height: 110% !important;
   margin: 2.5rem 0 1.5rem 0;
 }
 
+h2 {
+  font-size: 2.2rem;
+  line-height: 110% !important;
+  margin: 2.5rem 0 1.5rem 0;
+  font-weight: 300;
+  border-top: 1px solid #eaecef;
+  padding-top: 1.5rem;
+}
+
 h3 {
-  font-size: 2rem;
+  font-size: 1.8rem;
   line-height: 110% !important;
   margin: 2rem 0 1rem 0;
 }
 
 h4 {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   line-height: 110% !important;
   margin: 1.5rem 0 0.75rem 0;
 }
@@ -191,7 +200,8 @@ h6 {
 }
 
 p {
-    margin: 1rem 0;
+  margin: 1rem 0;
+  font-size: 1.1em;
 }
 
 figcaption h4 {
