--- a/themes/learn/layouts/partials/menu-footer.html
+++ b/themes/learn/layouts/partials/menu-footer.html
@@ -1,1 +1,1 @@
-<p>For help and support, please contact <a href="mailto:devrel@vonage.com">devrel@vonage.com</a></p>
+<!-- <p>For help and support, please contact <a href="mailto:devrel@vonage.com">devrel@vonage.com</a></p> -->
